svn/head
- remove the annoying permanent flicker of the buddy list
 
version 0.9.9.140
- incompatible protocol change! (adding and removing buddies)  
- implemented offline messages
- implemented logging
- bugfix: possible race condition when opening 2 chat windows in a short time 
- bugfix: allow non-ascii characters in buddy name
- bugfix: a buddy can now be removed from the list
- bugfix: prevent possible DoS attack through faked "ping" messages
- bugfix: wrong initialization of buddy list window didn't work on Mac 

version 0.9.9.109
- bugfix: if /tmp was on a separate partition, file receiving was broken   
- bugfix: show correct buddy status immediately after connect
- new connection attempts and keep-alives now in random intervals
- implemented configuration file
- included some (unfinished) documentation

version 0.9.9.98
- bugfix: allow non ascii characters in filenames

version 0.9.9.96
- bugfix: fixes slow connection in 0.9.9.95
 
version 0.9.9.95
- notification popups and flashing symbols in taskbar
- file transfers can recover from connection breakdowns

version 0.9.9.85
- time stamps in chat window
- fixed: Messages may now contain newline characters
- file transfer

versions up to 0.9.9.64
- basic messaging functionality
- first really stable version